<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="hoteles">Hoteles</string>
    <string name="sitios_turisticos">Sitios turisticos</string>
    <string name="operaciones_turistica">Operaciones turistica</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_hotel">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_map">maps</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="accion_aceptar">Guardar</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_correo">Correo</string>
    <string name="title_activity_sitios_turisticos">SitiosTuristicosActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
